Added result output code

--- a/web_page/index.html
+++ b/web_page/index.html
@@ -261,8 +261,7 @@
 
       </form>
 
-      <div id="results">
-
+      <div id="results" class="w-75 d-flex flex-column justify-content-center align-items-center">
       </div>
 
       
