--- a/web_page/index.html
+++ b/web_page/index.html
@@ -14,7 +14,34 @@
     <script src="script.js" defer></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm" crossorigin="anonymous"></script>
 
-    <form class="row g-3  mb-3 m-3 w-75">
+    <nav class="navbar navbar-expand-lg bg-body-tertiary bg-dark w-100" data-bs-theme="dark">
+        <div class="container-fluid">
+          <a class="navbar-brand" href="#">EMU Course Search</a>
+          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+  
+            </ul>
+            <form class="d-flex" role="search">
+                <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                    <li class="nav-item">
+                      <a class="nav-link active" aria-current="page" href="https://github.com/Mohammad4844/EMU-Course-Search">Github Code</a>
+                    </li>
+                  </ul>
+            </form>
+          </div>
+        </div>
+      </nav>
+
+      <br>
+      <div class="container-fluid mb-3 w-75 display-6" style="font-size: 18px;" >
+        This is an unofficial alternative to EMU's course search. Allows you to search based on an availability schedule. 
+        Add the time windows in which you want your classes below.
+      </div>
+
+    <form class="row g-3  mb-3 m-3 w-75  border-dark-subtle border rounded p-3">
         <div class="col-md-6">
             <label for="departments" class="form-label">Departments</label>
             <select multiple id="departments" class=" js-example-basic-single form-select form-control" placeholder="">
